WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
28475
Chromium: render disabled mute button if audio is not present
https://bugs.webkit.org/show_bug.cgi?id=28475
Summary
Chromium: render disabled mute button if audio is not present
Andrew Scherkus
Reported
2009-08-19 17:09:40 PDT
If hasAudio() returns false or the media is in an error state, display a disabled mute button.
Attachments
Check for audio
(1.61 KB, patch)
2009-08-19 17:26 PDT
,
Andrew Scherkus
levin
: review+
eric
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andrew Scherkus
Comment 1
2009-08-19 17:26:23 PDT
Created
attachment 35164
[details]
Check for audio
David Levin
Comment 2
2009-08-19 21:38:57 PDT
Comment on
attachment 35164
[details]
Check for audio Made commit queue- pending Andrew's confirmation that the mediaSoundDisabled resource has been added on the Chromium side.
David Levin
Comment 3
2009-08-19 21:43:17 PDT
Comment on
attachment 35164
[details]
Check for audio I just found out that the resource is in.
Eric Seidel (no email)
Comment 4
2009-08-19 21:56:50 PDT
Comment on
attachment 35164
[details]
Check for audio Rejecting patch 35164 from commit-queue. This patch will require manual commit. Found no modified ChangeLogs, cannot create a commit message. All changes require a ChangeLog. See:
http://webkit.org/coding/contributing.html
Eric Seidel (no email)
Comment 5
2009-08-21 14:46:46 PDT
Looks like this was already landed.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug