2009-08-20  Andrew Scherkus  <scherkus@chromium.org>

Reviewed by David Levin.

        Render disabled mute button during an error or if no audio is present.

        https://bugs.webkit.org/show_bug.cgi?id=28475

        Covered by existing layout tests:
        media/video-controls-visible-audio-only.html
        media/video-no-audio.html

        * rendering/RenderThemeChromiumSkia.cpp:
        (WebCore::RenderThemeChromiumSkia::paintMediaMuteButton):

Canonical link: https://commits.webkit.org/39162@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@47576 268f45cc-cd09-0410-ab3c-d52691b4dbfc